--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-concat-css": "~2.3.0",
     "gulp-csso": "^3.0.0",
     "gulp-eslint": "~3.0.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "~1.5.0",
     "gulp-notify": "~3.0.0",
     "gulp-pug": "~3.3.0",
@@ -18,7 +19,11 @@
     "gulp-sass-glob": "^1.0.8",
     "gulp-sourcemaps": "~2.6.0",
     "gulp-svg-sprite": "~1.3.1",
-    "gulp-svgmin": "~1.2.2"
+    "gulp-svgmin": "~1.2.2",
+    "gulp.spritesmith": "^6.8.0",
+    "phantomjs": "^2.1.7",
+    "phantomjssmith": "^1.0.1",
+    "vinyl-buffer": "^1.0.1"
   },
   "dependencies": {
     "normalize.css": "~7.0.0",
