--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "ITLink",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
     "browser-sync": "~2.18.7",
+    "browserify": "^15.2.0",
     "del": "~3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "~4.0.0",
@@ -11,23 +15,42 @@
     "gulp-css-unit": "^1.2.2",
     "gulp-csso": "^3.0.0",
     "gulp-eslint": "~3.0.1",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "~1.5.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-notify": "~3.0.0",
     "gulp-pug": "~3.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "~0.5.4",
     "gulp-sass": "~3.1.0",
     "gulp-sass-glob": "^1.0.8",
     "gulp-sourcemaps": "~2.6.0",
     "gulp-svg-sprite": "~1.3.1",
     "gulp-svgmin": "~1.2.2",
+    "gulp-uglify": "^3.0.0",
     "gulp.spritesmith": "^6.8.0",
+    "nodemon": "^1.14.11",
     "phantomjs": "^2.1.7",
     "phantomjssmith": "^1.0.1",
-    "vinyl-buffer": "^1.0.1"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "normalize.css": "~7.0.0",
-    "jquery": "~3.2.1"
+    "jquery": "~3.2.1",
+    "body-parser": "^1.16.1",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.1",
+    "express": "^4.14.1",
+    "express-session": "^1.15.1",
+    "formidable": "^1.1.1",
+    "jsonfile": "^2.4.0",
+    "mongoose": "^4.8.6",
+    "morgan": "^1.8.1",
+    "nodemailer": "^3.1.4",
+    "pug": "^2.0.0-beta11",
+    "serve-favicon": "^2.4.0"
   }
 }
