--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,23 @@
 {
-    // Используйте IntelliSense, чтобы узнать о возможных атрибутах.
-    // Наведите указатель мыши, чтобы просмотреть описания существующих атрибутов.
-    // Для получения дополнительной информации посетите: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/gulp\\tasks\\js.process.js",
-            // "program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
-            // "args": ["js:process"]
-        }
-    ]
+  // Use IntelliSense to learn about possible Node.js debug attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Запустить программу",
+      "program": "${workspaceRoot}/app.js",
+      "cwd": "${workspaceRoot}"
+    //   "program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
+    //   "args": ["create:version"]
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Подключиться к процессу",
+      "port": 5858
+    }
+  ]
 }
